2007-03-20 Igor Zelmanovich <igorz@mainsoft.com>

	* GridView.cs: fixed: PageIndex considers PageCount.	

2007-03-20  Marek Habersack  <mhabersack@novell.com>

	* DataBoundControl.cs: avoid endless recursion here. Fixes bug #81175

	* LoginStatus.cs: render login/logout controls with the CssClass
	set from the parent control. Fixes bug #81196

2007-03-19 Igor Zelmanovich <igorz@mainsoft.com>

	* DataGrid.cs: fixed Save/Load view state, applying styles.	

2007-03-12 Igor Zelmanovich <igorz@mainsoft.com>

	* Style.cs: optimization: used CssStyleCollection .ctor w/o parameters.	

2007-03-09  Marek Habersack  <mhabersack@novell.com>

	* Login.cs: Make command name comparison case-insensitive in
	OnBubbleEvent. Patch from Mike Morano <mmorano@mikeandwan.us>

2007-03-06 Igor Zelmanovich <igorz@mainsoft.com>

	* DataGrid.cs: fixed: 
	Auto-generated columns are restored properly on postback from view state.

2007-03-06 Igor Zelmanovich <igorz@mainsoft.com>

	* Style.cs: fixed:
	when AddAttributesToRender(System.Web.UI.HtmlTextWriter, WebControl) 
	is called, WebControl parameter is passed as argument to 
	FillStyleAttributes (CssStyleCollection, IUrlResolutionService) method.

2007-03-06 Igor Zelmanovich <igorz@mainsoft.com>

	* DataList.cs:
	* DataListItem.cs:
	fixed applying styles if ExtractTemplateRows=true.

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* DropDownList.cs: in 2.0 first item is rendered with selected attribute
	is Enabled=false and no selected items.

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBoxList.cs: in 2.0 access key attribute is rendered in 'input' tags.

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBoxList.cs:
	* BulletedList.cs:
	* ListControl.cs:
	* ListItem.cs:
	* RadioButtonList.cs:
	fixed: list controls consider ListItem.Attributes property on render. 

2007-03-05 Igor Zelmanovich <igorz@mainsoft.com>

	* CheckBox.cs: fixed: 'span' tag is not rendered if all attributes 
	are rendered in 'input' tag. 
